--- a/bai8.html
+++ b/bai8.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <title>Bài 8: Định dạng văn bản</title>
 
+    <!-- FONT COMFORTAA -->
+    <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;700&display=swap" rel="stylesheet">
+
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: "Comfortaa", sans-serif;
             background: #EAF6FF;
             margin: 0;
             padding: 50px;
@@ -14,36 +17,37 @@
 
         h1 {
             text-align: center;
-            font-size: 42px;
-            margin-bottom: 30px;
+            font-size: 46px;
+            margin-bottom: 40px;
         }
 
-        /* CHO NỘI DUNG BUNG TOÀN TRANG */
         .content {
             width: 100%;
-            font-size: 22px;
-            line-height: 1.9;
+            font-size: 24px;
+            line-height: 2;
         }
 
-        /* TEXTAREA */
-        .raw-text {
-            width: 100%;
-            height: 600px;
-            font-size: 20px;
-            font-family: monospace;
-            padding: 20px;
-            border: 3px solid #007BFF;
-            border-radius: 12px;
+        /* Ô nổi bật cho tiêu đề từng bài */
+        .block-title {
             background: #fff;
-            box-sizing: border-box;
-            white-space: pre-wrap;
-            overflow: auto;
+            padding: 18px 25px;
+            margin: 35px 0 20px;
+            border-left: 8px solid #007BFF;
+            border-radius: 10px;
+            font-size: 28px;
+            font-weight: 700;
+        }
+
+        /* NỘI DUNG BÊN TRONG */
+        .block-text {
+            padding: 10px 10px 0px 10px;
+            font-size: 22px;
         }
 
         a {
             display: inline-block;
-            font-size: 22px;
-            margin-top: 40px;
+            font-size: 24px;
+            margin-top: 50px;
             text-decoration: none;
             font-weight: bold;
             color: #007BFF;
@@ -56,54 +60,80 @@
     <h1>Bài 8: Định dạng văn bản</h1>
 
     <div class="content">
-        <!-- NGUYÊN NỘI DUNG BẠN DÁN, KHÔNG ĐỤNG GÌ -->
-        <textarea class="raw-text" readonly>
-Luyện tập 1 trang 51 Tin học 12: Hãy sửa lại phần tử sau để làm nổi bật ý chính của câu: <p> thẻ strong vào thẻ em được sử dụng để nhấn mạnh vào nội dung trong phần tử. Thẻ B chỉ có tác dụng in đậm văn bản <p>
-Lời giải:
-<p><strong>Thẻ strong</strong> vào <em>thẻ em</em> được sử dụng để nhấn mạnh vào nội dung trong phần tử. Thẻ <strong>B</strong> chỉ có tác dụng in đậm văn bản.</p>
 
-Luyện tập 2 trang 51 Tin học 12: Trình bày đoạn văn bản sau bằng mã HTML:
- INTERNET TỐC ĐỘ CAO
- Dịch vụ Internet tốc độ cao là dịch vụ internet cáp quang chất lượng cao, ổn định, giá cả hợp lí.
-Các tính năng nổi bật:
- Tốc độ siêu cao từ 150 MBps trở lên
- Lắp đặt nhanh chóng trong 24h
-Phù hợp với cá nhân/Hộ gia đình
-Tặng modem 2 băng tần
-Miễn phí lắp đặt hỗ trợ 24/7 .
-Lời giải:
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>INTERNET TỐC ĐỘ CAO</title>
-</head>
-<body>
-<h1>INTERNET TỐC ĐỘ CAO</h1>
-<p><em>Dịch vụ Internet tốc độ cao là dịch vụ internet cáp quang chất lượng cao, ổn định, giá cả hợp lí.</em></p>
-<h2><strong>Các tính năng nổi bật:</strong></h2>
-<ul>
-    <li>Tốc độ siêu cao từ 150 MBps trở lên</li>
-    <li>Lắp đặt nhanh chóng trong 24h</li>
-    <li>Phù hợp với cá nhân/Hộ gia đình</li>
-    <li>Tặng modem 2 băng tần</li>
-    <li>Miễn phí lắp đặt hỗ trợ 24/7</li>
-</ul>
-</body>
-</html>
-Vận dụng 1 trang 51 Tin học 12: Hãy chỉ ra các bước cần thực hiện để sử dụng một màu cụ thể trong bức ảnh làm màu cho tiêu đề một bài thơ.
-Lời giải:
-Chọn màu cụ thể: Trước tiên, bạn cần quyết định màu sắc bạn muốn sử dụng cho tiêu đề của bài thơ.
-Chọn ảnh nền: Chọn một bức ảnh phù hợp để sử dụng làm nền cho tiêu đề. Bạn cũng có thể sử dụng một ảnh trắng đơn giản và thêm màu sắc sau đó.
-Tạo tiêu đề trong HTML: Sử dụng thẻ <h1>, <h2>, hoặc <h3> để tạo tiêu đề của bài thơ.
-Thêm ảnh nền và thuộc tính color để thay đổi màu chữ.
+        <!-- Luyện tập 1 -->
+        <div class="block-title">Luyện tập 1 trang 51 Tin học 12</div>
+        <div class="block-text">
+            Hãy sửa lại phần tử sau để làm nổi bật ý chính của câu:
+            <br><br>
+            &lt;p&gt; thẻ strong vào thẻ em được sử dụng để nhấn mạnh vào nội dung trong phần tử.
+            Thẻ B chỉ có tác dụng in đậm văn bản &lt;p&gt;
+            <br><br>
+            <b>Lời giải:</b><br>
+            &lt;p&gt;<strong>Thẻ strong</strong> vào <em>thẻ em</em> được sử dụng để nhấn mạnh vào nội dung trong phần tử.
+            Thẻ <strong>B</strong> chỉ có tác dụng in đậm văn bản.&lt;/p&gt;
+        </div>
 
-Vận dụng 2 trang 51 Tin học 12: Hãy đưa ra các định dạng một đoạn văn bản để được kết quả như sau:
- Định dạng chữ đậm
-- Định dạng chữ thường.
-- Định dạng chữ cỡ chữ.
-        </textarea>
+
+        <!-- Luyện tập 2 -->
+        <div class="block-title">Luyện tập 2 trang 51 Tin học 12</div>
+        <div class="block-text">
+            Trình bày đoạn văn bản sau bằng mã HTML:
+            <br><br>
+            INTERNET TỐC ĐỘ CAO<br>
+            Dịch vụ Internet tốc độ cao là dịch vụ internet cáp quang chất lượng cao, ổn định, giá cả hợp lí.<br>
+            Các tính năng nổi bật:<br>
+            Tốc độ siêu cao từ 150 MBps trở lên<br>
+            Lắp đặt nhanh chóng trong 24h<br>
+            Phù hợp với cá nhân/Hộ gia đình<br>
+            Tặng modem 2 băng tần<br>
+            Miễn phí lắp đặt hỗ trợ 24/7.<br><br>
+
+            <b>Lời giải:</b><br><br>
+
+            &lt;!DOCTYPE html&gt;<br>
+            &lt;html lang="en"&gt;<br>
+            &lt;head&gt;<br>
+            &nbsp;&nbsp;&lt;meta charset="UTF-8"&gt;<br>
+            &nbsp;&nbsp;&lt;meta name="viewport" content="width=device-width, initial-scale=1.0"&gt;<br>
+            &nbsp;&nbsp;&lt;title&gt;INTERNET TỐC ĐỘ CAO&lt;/title&gt;<br>
+            &lt;/head&gt;<br>
+            &lt;body&gt;<br>
+            &nbsp;&nbsp;&lt;h1&gt;INTERNET TỐC ĐỘ CAO&lt;/h1&gt;<br>
+            &nbsp;&nbsp;&lt;p&gt;&lt;em&gt;Dịch vụ Internet tốc độ cao là dịch vụ internet cáp quang chất lượng cao, ổn định, giá cả hợp lí.&lt;/em&gt;&lt;/p&gt;<br>
+            &nbsp;&nbsp;&lt;h2&gt;&lt;strong&gt;Các tính năng nổi bật:&lt;/strong&gt;&lt;/h2&gt;<br>
+            &nbsp;&nbsp;&lt;ul&gt;<br>
+            &nbsp;&nbsp;&nbsp;&nbsp;&lt;li&gt;Tốc độ siêu cao từ 150 MBps trở lên&lt;/li&gt;<br>
+            &nbsp;&nbsp;&nbsp;&nbsp;&lt;li&gt;Lắp đặt nhanh chóng trong 24h&lt;/li&gt;<br>
+            &nbsp;&nbsp;&nbsp;&nbsp;&lt;li&gt;Phù hợp với cá nhân/Hộ gia đình&lt;/li&gt;<br>
+            &nbsp;&nbsp;&nbsp;&nbsp;&lt;li&gt;Tặng modem 2 băng tần&lt;/li&gt;<br>
+            &nbsp;&nbsp;&nbsp;&nbsp;&lt;li&gt;Miễn phí lắp đặt hỗ trợ 24/7&lt;/li&gt;<br>
+            &nbsp;&nbsp;&lt;/ul&gt;<br>
+            &lt;/body&gt;<br>
+            &lt;/html&gt;
+        </div>
+
+
+        <!-- Vận dụng 1 -->
+        <div class="block-title">Vận dụng 1 trang 51 Tin học 12</div>
+        <div class="block-text">
+            Hãy chỉ ra các bước cần thực hiện để sử dụng một màu cụ thể trong bức ảnh làm màu cho tiêu đề một bài thơ.
+            <br><br>
+            <b>Lời giải:</b><br>
+            Chọn màu cụ thể, chọn ảnh nền, tạo tiêu đề bằng thẻ &lt;h1&gt;, &lt;h2&gt;, hoặc &lt;h3&gt;, sau đó thêm ảnh nền và thuộc tính color.
+        </div>
+
+
+        <!-- Vận dụng 2 -->
+        <div class="block-title">Vận dụng 2 trang 51 Tin học 12</div>
+        <div class="block-text">
+            Hãy đưa ra các định dạng một đoạn văn bản để được kết quả như sau:
+            <br><br>
+            Định dạng chữ đậm<br>
+            - Định dạng chữ thường.<br>
+            - Định dạng chữ cỡ chữ.
+        </div>
+
     </div>
 
     <a href="index.html">← Quay lại trang chính</a>
