--- a/bai11.html
+++ b/bai11.html
@@ -4,49 +4,65 @@
     <meta charset="UTF-8">
     <title>Bài 11: Chèn tệp đa phương tiện và khung nội tuyến</title>
 
+    <!-- Font Comfortaa -->
+    <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@400;600;700&display=swap" rel="stylesheet">
+
     <style>
         body {
-            font-family: Arial, sans-serif;
-            background: #EAF6FF;
+            font-family: "Comfortaa", sans-serif;
+            background: linear-gradient(135deg, #d7eaff, #bde0fe);
             margin: 0;
             padding: 40px;
         }
         .container {
             max-width: 1000px;
             margin: auto;
-            background: #fff;
+            background: #ffffff;
             padding: 40px;
-            border-radius: 12px;
-            box-shadow: 0 4px 12px rgba(0,0,0,0.2);
+            border-radius: 16px;
+            box-shadow: 0 4px 18px rgba(0,0,0,0.25);
         }
         h1 {
-            margin-top: 0;
             text-align: center;
-            font-size: 32px;
+            font-size: 36px;
+            margin-top: 0;
+            color: #0056d6;
+            font-weight: 700;
         }
-
+        h2 {
+            margin-top: 35px;
+            color: #00439c;
+            font-weight: 700;
+        }
         .content {
             font-size: 20px;
             line-height: 1.9;
         }
-
         a {
             display: inline-block;
             margin-top: 30px;
             text-decoration: none;
-            font-weight: bold;
+            font-weight: 700;
             color: #007BFF;
             font-size: 20px;
+            transition: 0.2s;
         }
-
+        a:hover {
+            transform: translateX(-4px);
+        }
         pre, code {
             font-size: 18px;
-            background: #f8f8f8;
-            padding: 12px;
-            border-radius: 8px;
+            background: #f7f7f7;
+            padding: 14px;
+            border-radius: 10px;
             overflow-x: auto;
             display: block;
-            border: 1px solid #ddd;
+            border: 1px solid #ccc;
+        }
+        hr {
+            margin: 30px 0;
+            border: none;
+            border-top: 2px dashed #b0c7e6;
         }
     </style>
 </head>
@@ -115,3 +131,4 @@
 
 </body>
 </html>
+
