--- a/bai16.html
+++ b/bai16.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <title>Bài 16: Định dạng khung</title>
 
+    <!-- Font Comfortaa -->
+    <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@400;600;700&display=swap" rel="stylesheet">
+
     <style>
         body {
-            font-family: Arial, sans-serif;
-            background: #EAF6FF;
+            font-family: "Comfortaa", sans-serif;
+            background: linear-gradient(135deg, #d7eaff, #bde0fe);
             margin: 0;
             padding: 40px;
         }
@@ -17,19 +20,36 @@
             margin: auto;
             background: #fff;
             padding: 40px;
-            border-radius: 12px;
-            box-shadow: 0 4px 12px rgba(0,0,0,0.2);
+            border-radius: 16px;
+            box-shadow: 0 4px 18px rgba(0,0,0,0.25);
         }
 
         h1 {
             margin-top: 0;
             text-align: center;
-            font-size: 32px;
+            font-size: 38px;
+            font-weight: 700;
+            color: #0056d6;
         }
 
         .content {
             font-size: 20px;
-            line-height: 1.85;
+            line-height: 1.9;
+        }
+
+        .raw-text {
+            width: 100%;
+            height: 680px;
+            padding: 18px;
+            font-family: "Comfortaa", monospace;
+            font-size: 18px;
+            white-space: pre-wrap;
+            overflow: auto;
+            box-sizing: border-box;
+            border: 2px solid #b8c1d1;
+            border-radius: 12px;
+            background: #f6f8fa;
+            outline: none;
         }
 
         a {
@@ -37,22 +57,13 @@
             margin-top: 35px;
             font-size: 22px;
             text-decoration: none;
-            font-weight: bold;
+            font-weight: 700;
             color: #007BFF;
+            transition: 0.2s;
         }
 
-        .raw-text {
-            width: 100%;
-            height: 680px;
-            padding: 18px;
-            font-family: monospace;
-            font-size: 18px;
-            white-space: pre-wrap;
-            overflow: auto;
-            box-sizing: border-box;
-            border: 2px solid #bbb;
-            border-radius: 10px;
-            background: #fafafa;
+        a:hover {
+            transform: translateX(-4px);
         }
     </style>
 </head>
