--- a/bai17.html
+++ b/bai17.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <title>Bài 17</title>
 
+    <!-- FONT COMFORTAA -->
+    <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@400;600;700&display=swap" rel="stylesheet">
+
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Comfortaa', cursive;
             background: linear-gradient(135deg, #EAF6FF, #D7E8FF);
             margin: 0;
             padding: 40px;
@@ -30,15 +33,22 @@
         h1 {
             margin-top: 0;
             text-align: center;
-            font-size: 34px;
+            font-size: 36px;
             color: #004E8F;
             letter-spacing: 1px;
             font-weight: bold;
         }
 
-        .content {
+        /* KHỐI NỘI DUNG CODE */
+        pre {
+            background: #f9fbff;
+            border-left: 6px solid #4A8FE7;
+            padding: 22px;
             font-size: 20px;
             line-height: 1.9;
+            white-space: pre-wrap;
+            overflow-wrap: break-word;
+            border-radius: 10px;
         }
 
         a {
@@ -59,19 +69,6 @@
             transform: scale(1.03);
         }
 
-        .raw-text {
-            width: 100%;
-            height: 680px;
-            padding: 20px;
-            font-family: Consolas, monospace;
-            font-size: 19px;
-            white-space: pre-wrap;
-            overflow: auto;
-            box-sizing: border-box;
-            border: 2px solid #bbb;
-            border-radius: 10px;
-            background: #fdfdfd;
-        }
     </style>
 </head>
 
@@ -81,8 +78,7 @@
 
     <h1>Bài 17</h1>
 
-    <div class="content">
-        <textarea class="raw-text" readonly>
+    <pre>
 Câu 1: Giải thích sự khác nhau giữa hai định dạng sau:
 
 Hai định dạng CSS "#p123+ p" và "h2#p123 + p" khác nhau về cách chọn phần tử HTML để áp dụng định dạng.
@@ -106,8 +102,7 @@ Câu 2: Trong phần Thực hành, các tên riêng (tên người, tên tổ ch
   padding: 2px; /* Thêm đệm xung quanh nội dung để không quá sát viền */
   display: inline-block; /* Đảm bảo viền ôm sát nội dung */
 }
-        </textarea>
-    </div>
+    </pre>
 
     <a href="index.html">← Quay lại trang chính</a>
 
